<resources>
    <string name="app_name">Tempele</string>
    <string name="action_settings">设置</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="main_title">主标题</string>
    <string name="sub_title">副标题</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="zone">个人中心</string>
    <string name="weather">天气</string>
    <string name="offline">离线</string>
    <string name="theme">夜间</string>
    <string name="search">搜索</string>
    <string name="scan">扫一扫</string>
    <string name="setting">设置</string>
    <string name="showfail">失败</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
