<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.widget.MainActivity">
    <item android:id="@+id/action_zone"
        android:title="@string/zone"
        android:orderInCategory="90"
        android:icon="@drawable/dot"
        app:showAsAction="never" />
    <item android:id="@+id/action_weather"
        android:title="@string/weather"
        android:orderInCategory="100"
        android:icon="@drawable/dot"
        app:showAsAction="never"/>
    <item android:id="@+id/action_offline"
        android:title="@string/offline"
        android:orderInCategory="100"
        android:icon="@drawable/dot"
        app:showAsAction="never"/>
    <item android:id="@+id/action_theme"
        android:title="@string/theme"
        android:orderInCategory="100"
        android:icon="@drawable/dot"
        app:showAsAction="never"/>
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:orderInCategory="100"
        android:icon="@drawable/dot"
        app:showAsAction="never"/>
    <item android:id="@+id/action_scan"
        android:title="@string/scan"
        android:orderInCategory="100"
        android:icon="@drawable/dot"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/dot"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
